<resources>
    <!--标题 start-->
    <string name="title_register">新用户注册</string>
    <string name="title_main_history">历史</string>
    <string name="title_main_locate">定位</string>
    <string name="title_main_message">消息</string>
    <string name="title_main_health">健康</string>
    <string name="title_main_setting">设置</string>
    <string name="title_add_device">添加设备</string>
    <string name="title_scan_qa_code">扫描二维码</string>
    <string name="title_qa_code">二维码</string>
    <string name="title_finish_info">完善资料</string>
    <string name="title_relationship">我与宝贝关系</string>
    <string name="title_choose_avator">选择头像</string>
    <string name="title_check_all_device">查看所有设备</string>
    <string name="title_baby_info">宝贝信息</string>
    <string name="title_care_staff">监护人员</string>
    <string name="title_locate_mode">定位模式</string>
    <string name="title_forget_pw">忘记密码</string>
    <string name="title_modify_pw">修改密码</string>
    <string name="title_device_manage">设备管理</string>
    <string name="title_fence_set">围栏设置</string>
    <string name="title_locate_regulate">位置修订</string>
    <string name="title_add_fence"> 新增</string>
    <string name="title_search_area"> 搜索区域</string>
    <!--标题 end-->
    <string name="app_name">守护者</string>
    <string name="register">注册</string>
    <string name="register_ing">正在注册</string>
    <string name="register_btn">注册并登录</string>
    <string name="forget_pw">忘记密码</string>
    <string name="pw_hint">输入密码</string>
    <string name="new_pw_hint">请输入新密码</string>
    <string name="mobile_hint">输入手机号码 </string>
    <string name="mobile_code_success_hint">短信已经成功发送到手机，请注意查收</string>
    <string name="set_pw_hint">设置密码</string>
    <string name="code_hint">输入验证码</string>
    <string name="code_btn">发送验证码</string>
    <string name="login">登录</string>
    <string name="login_now">立即登录</string>
    <string name="login_ing">登录中</string>
    <string name="get_base_list_ing">正在获取设备信息...</string>
    <string name="login_title">欢迎使用守护者</string>
    <string name="main_locate">定位</string>
    <string name="main_history">历史</string>
    <string name="main_message">消息</string>
    <string name="main_health">健康</string>
    <string name="main_setting">设置</string>
    <string name="add_device_hint">扫描产品说明书里面的二维码</string>
    <string name="add_now">直接添加</string>
    <string name="bind_device_ing">绑定中\n请耐心等待...</string>
    <string name="next_step">下一步</string>
    <string name="submit">提交</string>
    <string name="baby_avator">宝贝头像</string>
    <string name="baby_name">宝贝姓名</string>
    <string name="baby_birthday">宝贝生日</string>
    <string name="baby_sex">宝贝性别</string>
    <string name="baby_nickname">宝贝昵称</string>
    <string name="baby_nickname_edit_hint">请填写宝贝昵称</string>
    <string name="baby_nickname_hint">宝宝</string>
    <string name="shoe_size">鞋子尺码</string>
    <string name="shoe_size_hint">选择尺码</string>
    <string name="relationship">关&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;系</string>
    <string name="relationship_hint">填写关系</string>
    <string name="baby_name_hint">填写昵称</string>
    <string name="birthday_hint">选择日期</string>
    <string name="dialog_title_select_avator">请选择头像来源</string>
    <string name="dialog_select_form_photo_list">从相册选取</string>
    <string name="dialog_take_a_shot">拍照</string>
    <string name="dialog_title_shutdown">远程关机</string>
    <string name="dialog_title_fence_operating">操作</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="go_there">去这里</string>
    <string name="modify_pw">修改密码</string>
    <string name="device_manage">设备管理</string>
    <string name="family_setting">监护人员</string>
    <string name="saftey_setting">围栏设置</string>
    <string name="qrcode_setting">设备二维码</string>
    <string name="position_setting">位置修订</string>
    <string name="location_setting">定位模式</string>
    <string name="shutdown_setting">远程关机</string>
    <string name="exit_login">退出登录</string>
    <string name="huhang">护航</string>
    <string name="sport_every_day">每天运动</string>
    <string name="hot_sport">热门活动</string>
    <string name="day">天</string>
    <string name="today">今天</string>
    <string name="step">步</string>
    <string name="force_top">脚掌受力</string>
    <string name="force_bottom">脚跟受力</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="manager">管理员</string>
    <string name="sex_unknown">未知</string>
    <string name="dialog_title_select_sex">请选择性别</string>
    <string name="mode_normal">正常模式</string>
    <string name="mode_save_power">省电模式</string>
    <string name="mode_normal_hint">每5分钟上传监听数据</string>
    <string name="mode_save_power_hint">关闭实时监听功能</string>
    <string name="qa_code_tip">打开守护者扫描二维码即可绑定设备</string>
    <string name="fence_range_string">方圆#米</string>
    <string name="edit_info">编辑信息</string>
    <string name="delete">删除</string>
    <string name="has_bind_mobile">已绑定手机</string>
    <string name="locate_regulate">定位校正</string>
    <string name="searching">正在搜索...</string>
    <string name="searching_hint">输入关键词正在搜索地区...</string>
    <string name="offline_tip">糟糕，掉线了。。。</string>
    <string name="i_know">知道了</string>
    <string name="loading_position_mode">正在获得当前模式</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
