<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_select_avator"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/dialog_title_select_avator"
        android:textColor="@color/black_363636"
        android:textSize="@dimen/text_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_list"/>

    <TextView
        android:id="@+id/tv_itme1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/dialog_select_form_photo_list"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/divider_list"/>

    <TextView
        android:id="@+id/tv_itme2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/dialog_take_a_shot"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_content"/>

</LinearLayout>
