<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_select_avator"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/baby_nickname_edit_hint"
        android:textColor="@color/black_363636"
        android:textSize="@dimen/text_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_list" />

    <cn.protector.ui.widget.ImageEditText
        android:id="@+id/ev_baby_nickname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_cancel"
            style="@style/btn_cancel"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_ok"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>
