<LinearLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:orientation="vertical"
    android:paddingTop="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/baby_avator"
            android:textColor="@color/text_content"
            android:textSize="@dimen/text_content"/>

        <cn.common.ui.widgt.RoundImageView
            android:id="@+id/riv_avator"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            my:roundImageView_game_border_color="@color/gray_999999"
            my:roundImageView_game_border_thickness="3dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baby_name"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_content"/>

            <EditText
                android:id="@+id/ev_baby_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@color/trans"
                android:hint="@string/baby_name_hint"
                android:textColor="@color/text_content"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/text_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/divider_menu"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baby_birthday"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@color/trans"
                android:hint="@string/birthday_hint"
                android:textColor="@color/text_content"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/text_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/divider_menu"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@color/trans"
                android:hint="@string/shoe_size_hint"
                android:textColor="@color/text_content"
                android:textColorHint="@color/gray_999999"
                android:textSize="@dimen/text_content"/>
        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_next"
            style="@style/btn_blue"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector_blue_r"
            android:text="@string/next_step"
            android:textColor="@drawable/text_selector_btn_blue_r"/>
    </RelativeLayout>
</LinearLayout>