<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_select_avator"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/dialog_title_fence_operating"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/blue_03a9f4" />

    <Button
        android:id="@+id/btn_edit_info"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_selector_white_gray"
        android:gravity="center"
        android:text="@string/edit_info"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/divider_menu" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/list_selector_white_gray"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/text_content" />
</LinearLayout>
