<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_select_avator"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/dialog_title_select_sex"
        android:textColor="@color/black_363636"
        android:textSize="@dimen/text_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_list" />

    <Button
        android:id="@+id/btn_male"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_selector_white_gray"
        android:gravity="center"
        android:text="@string/male"
        android:textColor="@drawable/text_selector_sex"
        android:textSize="@dimen/text_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/divider_list" />

    <Button
        android:id="@+id/btn_female"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/list_selector_white_gray"
        android:gravity="center"
        android:text="@string/female"
        android:textColor="@drawable/text_selector_sex"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/text_content" />
</LinearLayout>
