<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <com.amap.api.maps.MapView
        android:id="@+id/mv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ImageView
        android:id="@+id/iv_locate"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="110dp"
        android:background="@drawable/btn_selector_location"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_selector_plus"/>


    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_locate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/locate_regulate"
            android:textColor="@color/black_333333"
            android:textSize="14dp"/>


        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:text="@string/add_device_hint"
            android:textColor="@color/gray_999999"
            android:textSize="11dp"/>

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_blue"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_selector_blue_r"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/save"
            android:textColor="@drawable/text_selector_btn_blue_r"
            android:textSize="11dp"/>
    </LinearLayout>
</FrameLayout>
