<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:descendantFocusability="afterDescendants"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="25dp">

        <cn.protector.ui.widget.ImageEditText
            android:id="@+id/ev_mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <cn.protector.ui.widget.ImageEditText
            android:id="@+id/ev_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textColor="@color/gray_757575"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_register"
                android:layout_alignParentRight="true"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/forget_pw"
                android:textColor="@color/gray_757575"
                android:textSize="16dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_ok"
                style="@style/btn_blue"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/login" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>